Modify new instance code.